# axum_seaorm

./: .gitignore  Cargo.toml  Jenkinsfile
entity/: Cargo.toml
entity/src/: comment.rs  mod.rs  post.rs  prelude.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250709_111950_create_posts_table.rs  m20250709_112032_create_comments_table.rs
src/: main.rs
src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
src/models/: mod.rs  post_models.rs  user_models.rs
src/routes/: auth_routes.rs  user_routes.rs
src/utils/: api_error.rs  constants.rs  guard.rs  jwt.rs  mod.rs
